# D-M-Management-Software

./: README.md
Codigo/: docker-compose.yml  init-multiple-databases.sh  response_virtualizar.html
Codigo/api_gateway/: nginx.conf
Codigo/dm_asistente_core/: README.md  pyproject.toml
Codigo/dm_asistente_core/dm_asistente_core/: __init__.py  constants.py  django_views.py  gemini_service.py  profiles.py
Codigo/frontend_app/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.js
Codigo/frontend_app/src/: App.jsx  index.css
Codigo/service_analytics/analytics_project/: settings.py  urls.py
Codigo/service_chatbot/: .env.example  Dockerfile
Codigo/service_chatbot/chatbot_project/: settings.py  urls.py
Codigo/service_chatbot/conversacion/: apps.py  views.py
Codigo/service_core_projects/: manage.py  requirements.txt
Codigo/service_core_projects/core/: admin.py  models.py  serializers.py  views.py
Codigo/service_core_projects/core_projects_project/: asgi.py  settings.py  urls.py  wsgi.py
Codigo/service_core_projects/projects/: models.py  urls.py  views.py
Codigo/service_documents/: manage.py  requirements.txt
Codigo/service_documents/documents_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Codigo/service_logsec/: manage.py
Codigo/service_logsec/logsec_project/: asgi.py  settings.py  urls.py  wsgi.py
Codigo/service_public/: .gitignore  Dockerfile  diagnostico_gemini.py  requirements.txt
Codigo/service_public/catalogo/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
(+46 files in other folders)
